--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   </main>
   <footer>
-    <p>This page was originally created by Colleen van Lent for the <a
+    <p>This page was originally created by Ammar for the <a
         href="https://www.coursera.org/specializations/web-design"> Web Design for Everybody</a> Specialization.
       Specialization. Students are invited to make changes.</p>
   </footer>
